Fix lmsensors module

* Don't show sensors that have been set to ignore in /etc/sensors.conf
* Try to get a reading from the sensor and don't use it if there's an error
* Set the units based on the sensors.  C for temperature, RPM for fans, V for voltages
* Use the lmsensors internal name for the ksysguard name.  The human readable name may not be unique (fixes 107941)
  This does change the names of sensors, so it will break worksheets from kde3.  Because of this, it might not be a
  good idea to backport to kde3's ksysguard

BUG:107941


svn path=/trunk/KDE/kdebase/workspace/; revision=645829